--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<!-- External Scripts -->
 
 	<!-- Scripts -->
-	<script src="scripts/test.js" type="module"></script>
+	<script src="https://rubbish0401.github.io/SongListDisplay/scripts/test.js" type="module"></script>
 	<script src="scripts/index-header.js"></script>
 	<script src="scripts/index.js"></script>
 
