--- a/list.html
+++ b/list.html
@@ -44,11 +44,11 @@
 
 <body>
 	<div id="back" class="back">
-		<div id="capture-btn" class="floating-btn">
+		<div id="capture-btn" class="floating-btn" title="Download Capture">
 			<img src="src/images/svg/save.svg">
 		</div>
 
-		<div id="upload-btn" class="floating-btn">
+		<div id="upload-btn" class="floating-btn" title="Upload">
 			<img src="src/images/svg/upload.svg">
 		</div>
 	</div>
